2018-10 1.6.0
  - Groovy Console binding:
    - Added SQL2 collection method
    - Page actions: manage tags

2018-09-28 1.5.0
  - Groovy Console binding:
    - Run custom code as binding action (#28)
    - Page actions: (de)activate and delete containing page
  - Better logging (#25)
  - Enhanced health check (#26)
  - Fixed bugs:
    - Exception in log for history page on AEM 6.4 (#24)

2018-08-29 1.4.0
  - Groovy Console extension:
    - added filterByProperty()
    - added filterByHasProperty()
  - Fixed issue with access rights

2018-08-24 1.3.0
  - Execute scripts in alphabetical order
  - Stop execution after first failed script
  - API changes

2018-08-07 1.2.0
  - Updated API
  - AEM 6.4 fix
  - GUI fixes

2018-07-25 1.1.0
  - Design improvements
  - AEM 6.4 support
  - Moved filter classes to API
  - Bundle: update Groovy Console to version 12.0.0


2018-07-19 1.0.0
  - Fixes for install hook
  - Bundle package that also installs Groovy Console
  - Performance improvements


2018-07-19 0.9
  - initial release
  