@@ -16,37 +16,28 @@
  * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
-package de.valtech.aecu.core.groovy.console.bindings.actions;
 
-import static org.junit.Assert.assertTrue;
-import static org.mockito.Mockito.when;
+package de.valtech.aecu.core.groovy.console.bindings.actions.print;
+
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+
+import de.valtech.aecu.core.groovy.console.bindings.actions.Action;
 
 import org.apache.sling.api.resource.Resource;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.apache.sling.api.resource.ValueMap;
+
+import javax.annotation.Nonnull;
 
 /**
- * Tests PrintPath
- * 
- * @author Roland Gruber
+ * @author Roxana Muresan
  */
-@RunWith(MockitoJUnitRunner.class)
-public class PrintPathTest {
+public class PrintJson implements Action {
 
-    @Mock
-    private Resource resource;
-
-    @Test
-    public void doAction() {
-        String path = "path";
-        when(resource.getPath()).thenReturn(path);
-
-        PrintPath action = new PrintPath();
-        String result = action.doAction(resource);
-
-        assertTrue(result.contains(path));
+    @Override
+    public String doAction(@Nonnull Resource resource) {
+        ValueMap properties = resource.getValueMap();
+        Gson gson = new GsonBuilder().setPrettyPrinting().create();
+        return gson.toJson(properties);
     }
-
 }
