@@ -1,19 +1,5 @@
 package de.valtech.aecu.core.groovy.console.bindings.impl;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-
-import javax.annotation.Nonnull;
-import javax.jcr.query.Query;
-
-import org.apache.sling.api.resource.PersistenceException;
-import org.apache.sling.api.resource.ResourceResolver;
-import org.scribe.utils.MapUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import de.valtech.aecu.api.groovy.console.bindings.ContentUpgrade;
 import de.valtech.aecu.api.groovy.console.bindings.CustomResourceAction;
 import de.valtech.aecu.api.groovy.console.bindings.filters.ANDFilter;
@@ -25,7 +11,6 @@ import de.valtech.aecu.api.groovy.console.bindings.filters.FilterByNodeNameRegex
 import de.valtech.aecu.api.groovy.console.bindings.filters.FilterByProperties;
 import de.valtech.aecu.api.groovy.console.bindings.filters.FilterByProperty;
 import de.valtech.aecu.core.groovy.console.bindings.actions.Action;
-import de.valtech.aecu.core.groovy.console.bindings.actions.PrintPath;
 import de.valtech.aecu.core.groovy.console.bindings.actions.multivalue.AddMultiValues;
 import de.valtech.aecu.core.groovy.console.bindings.actions.multivalue.RemoveMultiValues;
 import de.valtech.aecu.core.groovy.console.bindings.actions.multivalue.ReplaceMultiValues;
@@ -34,6 +19,9 @@ import de.valtech.aecu.core.groovy.console.bindings.actions.page.DeletePageActio
 import de.valtech.aecu.core.groovy.console.bindings.actions.page.RemovePageTagsAction;
 import de.valtech.aecu.core.groovy.console.bindings.actions.page.ReplicatePageAction;
 import de.valtech.aecu.core.groovy.console.bindings.actions.page.SetPageTagsAction;
+import de.valtech.aecu.core.groovy.console.bindings.actions.print.PrintJson;
+import de.valtech.aecu.core.groovy.console.bindings.actions.print.PrintPath;
+import de.valtech.aecu.core.groovy.console.bindings.actions.print.PrintProperty;
 import de.valtech.aecu.core.groovy.console.bindings.actions.properties.CopyPropertyToRelativePath;
 import de.valtech.aecu.core.groovy.console.bindings.actions.properties.DeleteProperty;
 import de.valtech.aecu.core.groovy.console.bindings.actions.properties.MovePropertyToRelativePath;
@@ -48,6 +36,20 @@ import de.valtech.aecu.core.groovy.console.bindings.traversers.ForDescendantReso
 import de.valtech.aecu.core.groovy.console.bindings.traversers.ForQuery;
 import de.valtech.aecu.core.groovy.console.bindings.traversers.ForResources;
 import de.valtech.aecu.core.groovy.console.bindings.traversers.TraversData;
+
+import org.apache.sling.api.resource.PersistenceException;
+import org.apache.sling.api.resource.ResourceResolver;
+import org.scribe.utils.MapUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+
+import javax.annotation.Nonnull;
+import javax.jcr.query.Query;
 
 public class ContentUpgradeImpl implements ContentUpgrade {
 
@@ -298,6 +300,20 @@ public class ContentUpgradeImpl implements ContentUpgrade {
     public ContentUpgrade printPath() {
         LOG.debug("printPath");
         actions.add(new PrintPath());
+        return this;
+    }
+
+    @Override
+    public ContentUpgrade printProperty(String property) {
+        LOG.debug("printProperty {}", property);
+        actions.add(new PrintProperty(property));
+        return this;
+    }
+
+    @Override
+    public ContentUpgrade printJson() {
+        LOG.debug("printJson");
+        actions.add(new PrintJson());
         return this;
     }
 
